# python_automation_hw_19

./: .gitignore  config.py  pyproject.toml
tests/android_app/: conftest.py  test_wikipedia.py
utils/: allure.py
